Bugs on Safari

--- a/sass/_section1.scss
+++ b/sass/_section1.scss
@@ -7,6 +7,7 @@
 
 .sec1__bunner{
 	width: 85%;
+	height: 100%;
 	background-color: #292732;
 	order: 2;
 	overflow: hidden;
